some fixes and get messages